[project]
name = "omicidx"
version = "0.1.0"
description = "Cloud-native replacement for SRAdb and GEOmetadb — query 80M+ SRA runs, 8M GEO samples, and 50M biosamples via DuckDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sean Davis", email = "seandavi@gmail.com" },
]
keywords = ["bioinformatics", "genomics", "SRA", "GEO", "metadata", "duckdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: SQL",
]

[project.urls]
Homepage = "https://github.com/omicidx/omicidx"
Repository = "https://github.com/omicidx/omicidx"
Issues = "https://github.com/omicidx/omicidx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "duckdb>=1.4.0",
    "sqlglot>=27.0.0",
    "universal-pathlib>=0.2.2",
    "s3fs>=2023.0.0",
    "jupyter>=1.0.0",
]
